# vectercise

./: .gitignore  CHANGELOG.md  LICENSE  README.md  vectercise.cabal
src/: Main.hs
src/Data/Vec/: EVec.hs  FNat.hs  Nat.hs  NatOps.hs  SNat.hs  Vec.hs  VecOps1.hs  VecOps2.hs  VecOps3.hs  VecOps4.hs  VecOps5.hs  VecOps6.hs  VecOps7.hs
